# routes/swagger.js
@@ -1,7 +1,9 @@
 const router = require('express').Router();
 const swaggerUi = require('swagger-ui-express');
-const swaggerDocunment = require('../swagger.json');
+const swaggerDocument = require('../swagger.json');
+
 router.use('/api-docs', swaggerUi.serve);
-router.get('/api-docs', swaggerUi.setup(swaggerDocunment));
+router.get('/api-docs', swaggerUi.setup(swaggerDocument));
+
 
 module.exports = router;
